<resources>
    <string name="app_name">Amur</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="welcome_text_one">ДОБРО ПОЖАЛОВАТЬ В AMUR</string>
    <string name="welcome_text_two">Зарегистрируйтесь в приложении.
    </string>
    <string name="welcome_text_three">
        В любимом человеке нравятся даже недостатки. \n A в нелюбимом раздражают даже достоинства.\n
    © Омар Хайям
    </string>
    <string name="button_facebook">FACEBOOK</string>
    <string name="button_enter_registration">РЕГИСТРАЦИЯ</string>
    <string name="button_enter">ВХОД</string>
    <string name="edit_text_email">E-MAIL</string>
    <string name="edit_text_password">Ваш пароль</string>
    <string name="minimum_password">Пароль не может быть менее 6 символов</string>
    <string name="auth_failed">Пароль или логин не верные</string>
    <string name="text_registration">Регистрация</string>
    <string name="text_send_password">Забыли пароль?</string>
    <string name="btn_send_password">Отправить пароль</string>
    <string name="text_already_remember_password">&lt;&lt; Обратно</string>
    <string name="action_settings">Settings</string>
    <string name="btn_change_photo">Загрузить фотографию</string>
    <string name="btn_delete_photo">Удалить фотографию</string>
    <string-array name="target_dating">
        <item>Серьезные отношения</item>
        <item>Общение</item>

    </string-array>
    <string-array name="target_orientation">
        <item>Гетеро</item>
        <item>Би</item>
        <item>Гей</item>
        <item>Готов к эксперементам</item>
    </string-array>
</resources>
