<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"

    android:fitsSystemWindows="true"
    >

    <VideoView
        android:scrollbars="none"
        android:clickable="false"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:fitsSystemWindows="true"
        android:id="@+id/VideoView">
    </VideoView>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/logo" />


    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"

        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"

            android:text="@string/welcome_text_one"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center_horizontal"


            android:text="@string/welcome_text_two"
            android:textColor="#FFFFFF" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="330dp"
        android:orientation="vertical"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutOne"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:theme="@style/MyEditText"
            android:textColorHint="#FFFFFF"
            >
            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:theme="@style/MyEditText"
                android:hint="@string/edit_text_email"
                android:padding="5dp"
                android:textColor="#FFFFFF"
                android:paddingBottom="15dp"
                android:textColorHint="#FFFFFF"
                android:textSize="18sp" />


        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutTwo"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:theme="@style/MyEditText"
            android:textColorHint="#FFFFFF"
            >

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:theme="@style/MyEditText"
            android:hint="@string/edit_text_password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"

            android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"

        android:layout_marginTop="460dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnRegistration"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_style_trasparent"

            android:gravity="center"
            android:padding="10dp"
            android:paddingTop="10dp"
            android:text="@string/button_enter_registration"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textAlreadyRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:text="@string/text_already_remember_password"
            android:textColor="#FFFFFF"
            android:textSize="12dp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="57dp"
        android:layout_height="43dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:indeterminate="false"
        android:progress="75"
        android:max="100"
        style="?android:attr/progressBarStyleHorizontal"

        android:secondaryProgress="100"
        android:progressDrawable="@drawable/circular"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout4" />
</android.support.constraint.ConstraintLayout>
